5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1664_1392.log
== TEST (2019-04-16 10:07:07) 
-- CODE:
consumo = float(input("Digite o consumo de agua:"))
if (consumo<=10):
	valor = (30+consumo*3)
else (consumo>10):
	valor = (30+consumo*3.5)
print (round(valor,2))	
-- ERROR:
File "XXXX", line 4
    else (consumo>10):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:07:19) 
-- CODE:
consumo = float(input("Digite o consumo de agua:"))
if (consumo<=10):
	valor = (30+consumo*3)
else:
	valor = (30+consumo*3.5)
print (round(valor,2))	
-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:07:29) 
-- CODE:
consumo = float(input("Digite o consumo de agua:"))
if (consumo<=10):
	valor = (30+consumo*3)
else:
	valor = (30+consumo*3.5)
print (round(valor,2))	
-- EXECUTION TIME:
0.141292
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
54.0
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
142.0
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
556.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
